force-app/main/default/objects/Distribution__c/Distribution__c.object-meta.xml
<CustomObject>
    <description>Cash distribution paid out against an Investment. Detail of Investment; optionally grouped under a Distribution Batch.</description>
    <label>Distribution</label>
    <nameField>
        <displayFormat>DIST-{0000}</displayFormat>
        <label>Distribution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>