force-app/main/default/objects/Distribution__c/fields/ACH_Status__c.field-meta.xml
<CustomField>
    <fullName>ACH_Status__c</fullName>
    <description>Payment-processing status of the distribution across ACH and cheque rails.</description>
    <inlineHelpText>Tracks the payment from Pending through Posted/Processed, or Failed/Returned; Cheque Mailed for paper cheques.</inlineHelpText>
    <label>Paid Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Cheque Mailed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>