force-app/main/default/objects/Distribution__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Distribution amount paid out. Sensitive financial value; access restricted via field-level security. Rolls up to the parent investment&apos;s Total Distributed.</description>
    <inlineHelpText>Enter the distribution amount in USD. Restricted field.</inlineHelpText>
    <label>Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>