force-app/main/default/objects/Distribution__c/fields/Distribution_Batch__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional batch this distribution was processed within. Nullable; distributions may exist outside a batch.</description>
    <inlineHelpText>Link the distribution batch this payment was processed in, if applicable.</inlineHelpText>
    <label>Distribution Batch</label>
    <referenceTo>Distribution_Batch__c</referenceTo>
    <relationshipLabel>Distributions</relationshipLabel>
    <relationshipName>Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>