force-app/main/default/objects/Distribution__c/fields/Distribution_Date__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Date__c</fullName>
    <description>Date the distribution was paid to the investor.</description>
    <inlineHelpText>Enter the date the distribution was paid.</inlineHelpText>
    <label>Distribution Date</label>
    <type>Date</type>
</CustomField>