force-app/main/default/objects/Distribution__c/fields/Equity_Pct__c.field-meta.xml
<CustomField>
    <fullName>Equity_Pct__c</fullName>
    <description>The investor&apos;s equity percentage used to compute this distribution within its batch. Seeded for batch-detail display.</description>
    <inlineHelpText>Enter the equity percentage applied to this distribution.</inlineHelpText>
    <label>Equity %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>