force-app/main/default/objects/Distribution__c/fields/Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Paid_By__c</fullName>
    <label>Paid By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>