force-app/main/default/objects/Distribution__c/validationRules/Amount_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Not_Negative</fullName>
    <active>true</active>
    <description>Prevents Distribution Amount from being set to a negative value. Factory-safe: zero and blank are permitted; only negative values (less than 0) trigger the error.</description>
    <errorConditionFormula>Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>Distribution Amount cannot be negative.</errorMessage>
</ValidationRule>