force-app/main/default/objects/Distribution__c/listViews/All_distributions.listView-meta.xml
<ListView>
    <fullName>All_distributions</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>ACH_Status__c</columns>
    <columns>Distribution_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All distributions</label>
</ListView>