force-app/main/default/objects/Distribution__c/listViews/Pending.listView-meta.xml
<ListView>
    <fullName>Pending</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Payment_Method__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACH_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Distributions</label>
</ListView>